--- a/style.css
+++ b/style.css
@@ -1158,9 +1158,9 @@
         border-radius: 0;
     }
     .chat-main {
-        width: 100vw;
-        min-width: 100vw;
-        max-width: 100vw;
+        width: calc(100vw - 180px);
+        min-width: calc(100vw - 180px);
+        max-width: calc(100vw - 180px);
         height: 100vh;
         position: relative;
         z-index: 1;
@@ -1182,9 +1182,9 @@
         border-radius: 0;
     }
     .chat-main {
-        width: 100vw;
-        min-width: 100vw;
-        max-width: 100vw;
+        width: calc(100vw - 120px);
+        min-width: calc(100vw - 120px);
+        max-width: calc(100vw - 120px);
         height: 100vh;
         font-size: 11px;
         border-radius: 0;
